Seo Document sugested changes

--- a/app/design/frontend/creo/default/locale/en_US/translate.csv
+++ b/app/design/frontend/creo/default/locale/en_US/translate.csv
@@ -1,177 +1,1 @@
-Caps
-Subscribe and get 20% OFF on your first purchase
-Email
-GET MY 20% OFF NOW
-Don?t show this popup again
-Home
-Home
-ACCESSORIES
-COLLECTIONS
-DESIGN YOUR OWN
-LOGIN
-T-Shirt
-NOTEBOOKS
-POLO SHIRTS
-"If you can Create, you can CREO."
-"Read on, and discover why CREO is more than a marketplace, and why the people are more essential than the product."
-What is CREO?
-CREO on a Mission
-THE CREO STORY
-CREO PEOPLE
-CREO At Work
-Customer Service
-FAQ
-SHIPPING
-Bulk Orders
-Return Policy
-Payment Method
-PRIVACY POLICY
-TERMS & CONDITIONS
-Account
-YOUR ACCOUNT
-WISHLIST
-CHECKOUT
-Track your order
-Track Shipment
-about us
-CONTACT US
-CUSTOMER SERVICE
-Payment Methods
-JOIN
-MY CART
-search entire store he
-Featured
-Trending
-Best Seller
-NEW
-Men 
-TShirt
-Women 
-Tank Top
-Polo
-New Collection
-Search by Design
-View All
-Barcode
-Brands
-Bikers
-Beach
-Beard
-Pug Life
-Retro/Boho
-X City Love
-"All designs are available on Round Neck T-Shirt, V Neck T-Shirt and Tank Tops."
-Beard
-Iphone 6
-Iphone 6 Plus
-Iphone 6S
-Iphone 6S Plus
-Samsung S6
-Samsung S6 Edge
-Phone Model
-Cases
-Beard
-Leather
-Wood
-Notebook Material
-Mesh Caps
-Snap Backs
-Arabic
-Bring The Boom
-Flags
-I Represent
-Ocean of Emotions
-Gender
-Beard
-CREO
-Mustache
-Glasses
-LIPS
-Super Heroes
-Arabic
-City
-Celebrity Hush
-Love
-Quotes
-COCO Skulls
-Majnoon
-Trendy
-Movie Posters
-Dubai Icon
-The Crazy Ones
-Women Clothing
-Men Clothing
-Phone Covers
-Corporate Orders
-Create
-Just Because
-That Feeling
-Coffee
-Music
-Pug Line
-Family
-Scary
-Description
-SIZE GUIDE 
-Product Care
-Sizeÿ
-Styles
-Quantity:
-Creo's Celebrity Hush is a provocative insight on the secret life of celebrities. But you don't have to hush about it.
- Add to Cart
-Shipping Information
-PRODUCT DESCRIPTION
-UNIT PRICE
-QUANTITY
-2PAC Celebrity Hush
-Edit Remove Item
-Size
-Styles
-Round
-Tshirt Color
-Green
-Grand Total
-Subtotal
-CONTINUE SHOPPING
-Proceed to Checkout
-UPDATE SHOPPING BAG
-CLEAR CART
-CHECKOUT
- billing and shipping
-First Name 
-Last Name 
-Email Address 
-Telephone 
-Address 
-Address 2
-City 
-Country 
-Shipping Method
-Select Shipping Method
-Express shipping 
- payment
-please select a payment method
-Credit Card
-Credit Card Type
-Name on Card
-Credit Card Number
-Verification Number
-Expiration Date
-month
-year
-Issue Number:
-Start Date:
-Cash On Delivery
-Promo Code
-APPLY PROMO CODE
-Place Order
-Please make sure to select tshirt color.
-has been added to your shopping cart.
-SUCCESS
-Alert!
-Please make sure to select style.
-Your order has been received.
-Thank you for your purchase!
-Your order # is
-You will receive an order confirmation email with details of your order and a link to track its progress.
-You have no items in your shopping cart.
+%s has been added to your shopping cart.
