Sa Arabic locale replaced with cleen one

--- a/app/locale/ar_SA/Mage_Bundle.csv
+++ b/app/locale/ar_SA/Mage_Bundle.csv
@@ -1,52 +1,52 @@
-"--Select--","--Select--"
-"Add New Option","Add New Option"
-"Add Selection","Add Selection"
-"As low as","As low as"
-"Bundle Items","Bundle Items"
-"Bundle Product","Bundle Product"
-"Buy %1$s with %2$s discount each","Buy %1$s with %2$s discount each"
-"Checkbox","Checkbox"
-"Choose a selection...","Choose a selection..."
-"Close","Close"
-"Default","Default"
-"Default Qty","Default Qty"
-"Default Title","Default Title"
-"Drop-down","Drop-down"
-"Dynamic","Dynamic"
-"Excl. Tax","Excl. Tax"
-"Fixed","Fixed"
-"From","From"
-"From:","From:"
-"Gift Message","Gift Message"
+"--Select--","--اختيار--"
+"Add New Option","اضف خيارا جديدا"
+"Add Selection","إضافة اختيار"
+"As low as","قليل بدرجة"
+"Bundle Items","عناصر الحزمة"
+"Bundle Product","منتجات الحزمة"
+"Buy %1$s with %2$s discount each","شراء %1$s مع %2$s خصم للكل"
+"Checkbox","مربع اختيار"
+"Choose a selection...","حدد اختيارا..."
+"Close","إنهاء"
+"Default","إفتراضي"
+"Default Qty","كمية إفتراضية"
+"Default Title","عنوان إفتراضي"
+"Drop-down","المنسدلة"
+"Dynamic","ديناميكي"
+"Excl. Tax","بدون ضرائب"
+"Fixed","ثابت"
+"From","من"
+"From:","المرسل:"
+"Gift Message","بطاقة هدية"
 "Incl. Tax","Incl. Tax"
-"Input Type","Input Type"
-"Is Required","Is Required"
-"Message:","Message:"
-"Multiple Select","Multiple Select"
-"N/A","N/A"
-"No options of this product are available.","No options of this product are available."
-"None","None"
-"Percent","Percent"
-"Percent Discount","Percent Discount"
-"Please enter search conditions to view products.","Please enter search conditions to view products."
-"Please select options for product.","Please select options for product."
-"Please select products to add","Please select products to add"
-"Please specify product option(s)","Please specify product option(s)"
-"Position","Position"
-"Price Range","Price Range"
-"Price Type","Price Type"
-"Price as configured","Price as configured"
-"Qty:","Qty:"
-"Radio Buttons","Radio Buttons"
-"Required options not selected.","Required options not selected."
-"Selected required options not available.","Selected required options not available."
-"Separately","Separately"
-"Ship Bundle Items","Ship Bundle Items"
-"Shipment","Shipment"
-"Store View Title","Store View Title"
-"There is no defined renderer for ""%s"" option type","There is no defined renderer for ""%s"" option type"
-"This product is also part of bundle(s)","This product is also part of bundle(s)"
-"To","To"
-"To:","To:"
-"Together","Together"
-"User Defined Qty","User Defined Qty"
+"Input Type","نوع الإدخال"
+"Is Required","مطلوب"
+"Message:","نص الرسالة:"
+"Multiple Select","اختيار متعدد"
+"N/A","غير متاح"
+"No options of this product are available.","لايوجد خيارات متاحة لهذا المنتج"
+"None","لايوجد"
+"Percent","بالمئة"
+"Percent Discount","حسم بالمئة"
+"Please enter search conditions to view products.","الرجاء إدخال شروط البحث لعرض المنتجات"
+"Please select options for product.","الرجاء حدد خيارات للمنتج"
+"Please select products to add","الرجاء تحديد المنتجات للإضافة"
+"Please specify product option(s)","الرجاء تخصيص خيار(ات) المنتج"
+"Position","مكان"
+"Price Range","السعر يترواح"
+"Price Type","نوع السعر"
+"Price as configured","السعر كما تم تحديده"
+"Qty:","الكمية:"
+"Radio Buttons","أزرار الخيار"
+"Required options not selected.","الخيارات المطلوبة لم يتم اختيارها"
+"Selected required options not available.","الخيارات المطلوبة المحددة غير متاحة"
+"Separately","على حدة"
+"Ship Bundle Items","شحن حزمة المواد"
+"Shipment","شحنة"
+"Store View Title","عنوان منظر المتجر"
+"There is no defined renderer for ""%s"" option type","ليس هناك تعريف لنوع العارض ""٪ S"" نوع الخيار"
+"This product is also part of bundle(s)","هذا المنتج  جزء من الحزمة"
+"To","إلى"
+"To:","المرسل إليه:"
+"Together","معاً"
+"User Defined Qty","الكمية المعرفة من المستخدم"
