--- a/app/locale/ar_SA/Mage_CatalogInventory.csv
+++ b/app/locale/ar_SA/Mage_CatalogInventory.csv
@@ -1,65 +1,42 @@
-<<<<<<< HEAD
-"%s is not correct comparsion method.","%s is not correct comparsion method."
-"<strong>Please note</strong>, that these Settings are applicable to cart line Items, not the whole Cart.","<strong>Please note</strong>, that these Settings are applicable to cart line Items, not the whole Cart."
+"%s is not correct comparsion method.","%s طريقة المقارنة غير صحيحة"
+"<strong>Please note</strong>, that these Settings are applicable to cart line Items, not the whole Cart.","الرجاء الإنتباه , هذه الإعدادات المطبقة يمكن تطبيقها على عناصر السلة فقط ,وليس على كل السلة"
 "Allow Qty Below 0","السماح بالكمية 0"
 "Allow Qty Below 0 and Notify Customer","السماح بكمية تحت ال 0 و أعلام العميل"
 "Backorders","طلبات لاحقة"
 "By Fixed value","بقيمة ثابتة"
 "By Percentage","بنسبة مؤية"
 "Can not specify product identifier for order item","لا ينمت تخصيص معرف المنتج لترتيب الصنف"
-"Catalog Inventory","Catalog Inventory"
+"Catalog Inventory","محتوى التصنيفات"
 "Decrease Stock When Order is Placed","ازل من المخزون عند استلام الطلب الجديد"
 "In Stock","متوفر في المستودع"
 "Inventory","الجرد"
-"Inventory API","Inventory API"
-"Inventory Section","Inventory Section"
-"Manage Stock","Manage Stock"
+"Inventory API","API للمخزون"
+"Inventory Section","قسم المستودع"
+"Manage Stock","إدارة المخزون"
 "Maximum Qty Allowed in Shopping Cart","اقصى كمية مسموح بها فى سلة التسوق"
 "Minimum Qty Allowed in Shopping Cart","اقل كمية مسموح بها فى سلة التسوق"
 "No Backorders","لا توجد اوامر العودة"
 "Notify for Quantity Below","اعلم عندما تكون الكمية تحت "
-"Out of Stock","Out of Stock"
-"Product Stock Options","Product Stock Options"
-"Qty for Items' Status to become Out of Stock","Qty for Items' Status to become Out of Stock"
-"Retrieve stock data","Retrieve stock data"
-"Retrieve stock data by product ids","Retrieve stock data by product ids"
+"Out of Stock","غير متوفر في المخزون"
+"Product Stock Options","خيارات مخزون المنتج"
+"Qty for Items' Status to become Out of Stock","الكمية لحالة العناصر ستجعل المخزون فارغ"
+"Retrieve stock data","استعادة معلومات المخزون"
+"Retrieve stock data by product ids","استعادة معلومات المخزون بواسطة معرّفات المنتجات"
 "Rule price","السعر الاساسى"
-"Set Items' Status to be In Stock When Order is Cancelled","Set Items' Status to be In Stock When Order is Cancelled"
-"Some of the products are currently out of stock","Some of the products are currently out of stock"
-"Some of the products can not be ordered in requested quantity","Some of the products can not be ordered in requested quantity"
-"Some of the products cannot be ordered in the requested quantity","Some of the products cannot be ordered in the requested quantity"
+"Set Items' Status to be In Stock When Order is Cancelled","غير حالة المادة إلى ""متوفرة"" عند إلغاء الطلب"
+"Some of the products are currently out of stock","بعض المنتجات غير متوفرة حالياً في المخزون"
+"Some of the products can not be ordered in requested quantity","بعض المنتجات لا يمكن ترتيبها حسب الكمية المطلوبة"
+"Some of the products cannot be ordered in the requested quantity","بعض المنتجات لا يمكن ترتيبها حسب الكمية المطلوبة"
 "Stock Options","خيارات المخزون"
-"Stock item for Product in option is not valid","Stock item for Product in option is not valid"
-"Stock item for Product is not valid","Stock item for Product is not valid"
-"The maximum quantity allowed for purchase is %s.","The maximum quantity allowed for purchase is %s."
-"The minimum quantity allowed for purchase is %s.","The minimum quantity allowed for purchase is %s."
+"Stock item for Product in option is not valid","عنصر المخزون للمنتج المختار غير صالح"
+"Stock item for Product is not valid","بند الاوراق المالية للسلعة غير صالح"
+"The maximum quantity allowed for purchase is %s.","الكمية القصوى المسموح شراؤها هي %s."
+"The minimum quantity allowed for purchase is %s.","الكمية الأدنى المسموح شراؤها هي %s."
 "The requested quantity for ""%s"" is not available.","الكمية المطلوبة لـ ""%s"" لم تعد موجودة"
 "The requested quantity is not available.","الكمية المطلوبة لم تعد موجودة."
-"This product is currently out of stock.","This product is currently out of stock."
+"This product is currently out of stock.","هذا المنتج غير موجود حاليا في المخزون"
 "To Fixed Value","الى قيمة ثابته"
 "To Percentage","الى نسبة مؤية"
-"Update","Update"
-"Update product stock data","Update product stock data"
+"Update","تحديث"
+"Update product stock data","تحديث معلومات مخزون المنتج"
 "Update the Product","تحديث هذا المنتج"
-=======
-"Can not specify product identifier for order item","لا ينمت تخصيص معرف المنتج لترتيب الصنف"
-"No Backorders","لا توجد اوامر العودة"
-"Backorders","اوامر العودة"
-"Minimum Qty for Items' Status to be In Stock","اقل كمية لكل صنف مسموح بوجودها فى المخزون"
-"Minimum Qty Allowed in Shopping Cart","اقل كمية مسموح بها فى سلة التسوق"
-"Maximum Qty Allowed in Shopping Cart","اقصى كمية مسموح بها فى سلة التسوق"
-"The requested quantity is not available.","الكمية المطلوبة لم تعد موجودة."
-"The requested quantity for ""%s"" is not available.","الكمية المطلوبة لـ ""%s"" لم تعد موجودة"
-"To Fixed Value","الى قيمة ثابته"
-"To Percentage","الى نسبة مؤية"
-"Inventory","الجرد"
-"Allow Qty Below 0 and Notify Customer","السماح بكمية تحت ال 0 و أعلام العميل"
-"Allow Qty Below 0","السماح بالكمية 0"
-"Rule price","السعر الاساسى"
-"Decrease Stock When Order is Placed","ازل من المخزون عند استلام الطلب الجديد"
-"Notify for Quantity Below","اعلم عندما تكون الكمية تحت "
-"By Fixed value","بقيمة ثابتة"
-"By Percentage","بنسبة مؤية"
-"Update the Product","تحديث هذا المنتج"
-"Stock Options","خيارات المخزون"
->>>>>>> 6befb3e5115251dc0dfcceea1be9de3a5d169522
