--- a/app/locale/ar_SA/Mage_CatalogRule.csv
+++ b/app/locale/ar_SA/Mage_CatalogRule.csv
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 "Actions","العمليات"
 "Active","نشط"
 "Add New Rule","اضف قاعدة جديدة"
@@ -57,7 +56,7 @@
 "Status","الحالة"
 "Stop further rules processing","اوقف تطبيق القوانين مستقبلا"
 "The page you are trying to save no longer exists","الصفحة التى تحاول حفظها لم تعد موجودة"
-"There are rules that have been changed but not applied. Please, click Apply Rules in order to see immediate effect in catalog.","There are rules that have been changed but not applied. Please, click Apply Rules in order to see immediate effect in catalog."
+"There are rules that have been changed but not applied. Please, click Apply Rules in order to see immediate effect in catalog.","هناك قواعد التي تم تغييرها ولكن لا تطبق. من فضلك، انقر فوق تطبيق قوانين من أجل أن نرى أثر فوري في الكتالوج."
 "This rule no longer exists","هذة القاعدة لم تعد موجودة"
 "To Date","حتى تاريخ"
 "Unable to apply rules","لا يمكن تطبيق هذة القواعد"
@@ -65,71 +64,3 @@
 "Update product's %s %s: %s","تحديث بيانات المنتج %s %s: %s"
 "Websites","الموقع"
 "Yes","نعم"
-=======
-"Catalog","كتالوج"
-"Attribute Set","وضع الميزة"
-"Catalog Price Rules","قواعد الاسعار فى الكتالوج"
-"Catalog Price Rule","قاعدة الاسعار فى الكتالوج"
-"New Rule","قاعدة جديدة"
-"No","لا"
-"Unable to find a page to delete","لا يمكن ايجاد هذة الصفحة لحذفها"
-"Unable to apply rules","لا يمكن تطبيق هذة القواعد"
-"Active","نشط"
-"Yes","نعم"
-"There are rules that has been changed but not applied. To see immediate effect in catalog, please click Apply Rules","هناك بعض القوانين التى حفظت ولكنها لم تطبق بعد , لتشهد التأثير الفعلى على الكتالوج اضغط تطبيق القواعد"
-"This rule no longer exists","هذة القاعدة لم تعد موجودة"
-"From Date","من تاريخ"
-"Customer Groups","مجموعات العملاء"
-"Rule Information","معلومات القاعدة"
-"Rule Name","أسم القاعدة"
-"Stop further rules processing","اوقف تطبيق القوانين مستقبلا"
-"Invoices","الفواتير"
-"Description","الوصف"
-"Description: %s","الوصف: %s"
-"Websites","الموقع"
-"Credit Memos","المذكرات الائتمان"
-"General Information","المعلومات العامة"
-"ID","المعرف"
-"Name: %s","الأسم: %s"
-"Priority","الاولوية"
-"Promotions","الترقيات"
-"Conditions Combination","الجمع بين الشروط"
-"Conditions","الحالات"
-"Status","الحالة"
-"Options","الخيارات"
-"Shipments","الشحنات"
-"Customer is new buyer: %s","العميل : شار جديد: %s"
-"Customer registered: %s","العميل المسجل: %s"
-"Actions","العمليات"
-"The page you are trying to save no longer exists","الصفحة التى تحاول حفظها لم تعد موجودة"
-"Start at: %s","ابدأ عند: %s"
-"Save and Apply","احفظ و طبق"
-"Save Rule","احفظ القاعدة"
-"Delete Rule","احذف قاعدة"
-"Add New Rule","اضف قاعدة جديدة"
-"Date Start","بداية بتاريخ"
-"Expire at: %s","تنتهى عند: %s"
-"Rules were successfully applied","تم تطبيق القاعدة بنجاح"
-"Rule was successfully saved","تم حفظ القاعدة بنجاح"
-"Rule was successfully deleted","تم حذف القاعدة بنجاح"
-"Order Invoices","تاريخ الفواتير"
-"Date Expire","تاريخ الانتهاء"
-"Date From","تاريخ البداية"
-"Comments History","تاريخ التعليقات"
-"Order Shipments","تاريخ الشحن"
-"Order History","تاريخ الطلبات"
-"Update product's %s %s: %s","تحديث بيانات المنتج %s %s: %s"
-"Category","تصنيف"
-"Date To","حتى تاريخ"
-"To Date","حتى تاريخ"
-"Edit Rule","حرر قاعدة"
-"Edit Rule '%s'","حرر قاعدة '%s'"
-"Gift Messages","رسائل هدية"
-"Conditions (leave blank for all products)","شروط (اتركه فارغا لكافة المنتجات)"
-"Order Credit Memos","طلب مذكرة ائتمانية"
-"Order Gift Messages","طلب رسائل هدية"
-"Apply Rules","طبق القواعد"
-"Inactive","غير نشط"
-"NOT LOGGED IN","غير مسجل الدخول"
-"Product Attribute","صفة المنتج"
->>>>>>> 6befb3e5115251dc0dfcceea1be9de3a5d169522
