--- a/app/locale/ar_SA/Mage_GoogleBase.csv
+++ b/app/locale/ar_SA/Mage_GoogleBase.csv
@@ -31,7 +31,7 @@
 "Euro","Euro"
 "Expires","Expires"
 "Germany","Germany"
-"Google Base","Google Base"
+"Google Base","جوجل للتسوق"
 "Google Base Attribute","Google Base Attribute"
 "Google Base ID","Google Base ID"
 "Google Base Item Type","Google Base Item Type"
