--- a/app/locale/ar_SA/Mage_Tag.csv
+++ b/app/locale/ar_SA/Mage_Tag.csv
@@ -1,5 +1,4 @@
 "# of Uses","# للاستخدام"
-<<<<<<< HEAD
 "%s tag(s) have been accepted for moderation","%s tag(s) have been accepted for moderation"
 "Action","فعل"
 "Actions","افعال"
@@ -28,7 +27,7 @@
 "Delete","حذف"
 "Delete Tag","حذف العلامة"
 "Disabled","غير مفعل"
-"Edit Tag","تعديل علامة"
+"Edit Tag","تعديل السمة"
 "Edit Tag '%s'","تعديل العلامة '%s'"
 "Email","البريد الإلكتروني"
 "First Name","الاسم الأول"
@@ -89,92 +88,4 @@
 "Your tag was successfully deleted","Your tag was successfully deleted"
 "Your tag was successfully saved","Your tag was successfully saved"
 "ZIP/Post Code","الرمز البريدي"
-=======
-"CSV","CSV"
-"SKU","SKU"
-"Action","فعل"
-"Approved","وافق"
-"List","قائمة"
-"No matches found.","لم يتم العثور على تطابق."
-"Search Results for '%s' (<a href='%s'>RSS</a>)","نتائج البحث عن '%s' (<a href='%s'>RSS</a>)"
-"Are you sure you want to do this?","هل أنت متأكد أنك تريد فعل ذلك؟"
-"Are you sure?","هل أنت متأكد؟"
-"Are you sure you want to delete this tag?","هل انت متاكد انك تريد ان تحذف هذه العلامة؟"
-"Are you sure that you want to delete this tag?","هل انت متاكد انك تريد ان تحذف هذه العلامة؟"
-"Tagged in","موسومة في "
-"Product SKU","منتج SKU"
-"Tag Information","معلومات العلامة"
-"Pending","معلقة"
-"View All Tags","View All Tags"
-"Visible In","Visible In"
-"XML","XML"
-"Add to Wishlist","إضافة إلى قائمة الأمنيات"
-"Add to Cart","إضافة إلى عربة التسوق"
-"Actions","افعال"
-"Telephone","الهاتف"
-"Products","المنتجات"
-"Products tagged with '%s'","المنتجات الموسومه مع '%s'"
-"Products Tagged with '%s'","المنتجات الموسومه مع '%s'"
-"Products tagged with '%s' (<a href='%s'>RSS</a>)","المنتجات الموسومه مع '%s' (<a href='%s'>RSS</a>)"
-"Name","الاسم"
-"First Name","الاسم الأول"
-"Email","البريد الإلكتروني"
-"Status","الحالة"
-"Country","الدولة"
-"ZIP/Post Code","الرمز البريدي"
-"ID","الرمز التعريفي"
-"Customers Tagged '%s'","الزبائن الموسومه '%s'"
-"Price","السعر"
-"Grid","الشبكة"
-"Popularity","الشعبية"
-"Back","العودة"
-"Back to Tags List","العودة الى قائمة العلامات"
-"Back to view Tag","العودة الى مشاهدة العلامة"
-"Tags Aren't Available","العلامات غير متاحة"
-"Tag can't be empty.","العلامة لا يمكن ان تكون فارغه."
-"Customers","العملاء"
-"Your tag(s) have been accepted for moderation","ان البطاقه الخاصة بك قد قبلت لالاعتدال"
-"Click on a tag to view your corresponding products.","انقر على علامة المقابلة لعرض المنتجات الخاصة بك."
-"You have not tagged any products yet.","انت لم تقم بوسم اي منتج الى الان."
-"Product Name","اسم المنتج"
-"Tag Name","اسم العلامة"
-"Tag Name: %s","اسم العلامة: %s"
-"Last Name","اسم العائلة"
-"Uses","استخدام"
-"Other people marked this product with these tags:","اشخاص اخرين ملحوظ هذا المنتج مع هذه العلامات:"
-"Add Tags","اضف علامات"
-"Add Your Tags:","اضف علاماتك:"
-"Add New Tag","اضف علامة جديدة"
-"Block Information","اغلاق المعلومات"
-"General Information","بيانات عامة"
-"You tag was successfully saved","تم حفظ علامتك بنجاح"
-"You tag was successfully deleted","تم حذف علامتك بنجاح"
-"Use spaces to separate tags. Use single quotes (') for phrases.","تستخدم مسافات للفصل بين العلامات. واحد استخدام علامات الاقتباس ( ') لعبارات."
-"Edit Tag '%s'","تعديل العلامة '%s'"
-"Edit Tag","تعديل علامة"
-"Change status","تغيير الحالة"
-"All tags","جميع العلامات"
-"All Tags","جميع العلامات"
-"Save Tag","حفظ العلامة"
-"Delete","حذف"
-"Delete Tag","حذف العلامة"
-"Thank you. Your tag has been accepted for moderation.","شكرا لك. ان البطاقه الخاصة بك تم قبول الاعتدال.."
-"Popular","شعبي"
-"Tags","علامات"
-"Pending Tags","علامات معلقة"
-"Product Tags","علامات المنتج"
-"Popular Tags","علامات شعبية "
-"Tags:","علامات:"
-"My Tags","علاماتي"
-"Tag","علامة"
-"New Tag","علامة جديدة"
-"My Recent Tags","علامتي الحالية"
-"Customer Since","عميل منذ"
-"View Products","عرض المنتجات"
-"View Customers","عرض العملاء"
-"Unable to find any products tagged with '%s' in the current store","غير قادر على العثور على منتجات موسومة مع '%s' في المخزن الحالي"
-"Unable to save tag(s)","غير قادر على حفظ العلامات"
-"Unable to save your tag. Please, try again later.","غير قادر على حفظ علامتك يرجى المحاوله مرة اخرى."
-"Unable to remove tag. Please, try again later.","غير قادر على حذف العلامة يرجى المحاوله لاحقا ."
-"Disabled","غير مفعل"
->>>>>>> 6befb3e5115251dc0dfcceea1be9de3a5d169522
+"You have not tagged any products yet.","You have not tagged any products yet."
