--- a/app/locale/ar_SA/Mage_Wishlist.csv
+++ b/app/locale/ar_SA/Mage_Wishlist.csv
@@ -1,7 +1,6 @@
 "%1$s was successfully added to your wishlist. Click <a href=""%2$s"">here</a> to continue shopping","%1$s تم اضافتها بنجاح في قائمة الاماني. اضغط <a href=""%2$s"">here</a> لتكملة التسويق"
 "%s's Wishlist","%s's قائمة الاماني"
 "* Required Fields","* حقول مطلوبة"
-<<<<<<< HEAD
 "Add All to Cart","إضافة الكل إلى عربة التسوق"
 "Add to Cart","إضافة إلى عربة التسوق"
 "Add to Wishlist","إضافة إلى قائمة الأمنيات"
@@ -24,7 +23,7 @@
 "Go to Wishlist","الذهاب إلى قائمة الأمنيات"
 "Last Added Items","أخر السلع المضافة"
 "Message","رسالة"
-"My Wishlist","My Wishlist"
+"My Wishlist","قائمة أمنياتي"
 "My Wishlist (%d item)","قائمة أمنياتي (%d سلعة)"
 "My Wishlist (%d items)","قائمة أمنياتي (%d سلع)"
 "Please enter a valid email addresses, separated by commas. For example johndoe@domain.com, johnsmith@domain.com.","الرجاء ادخال عناوين البريد الالكتروني ، تفصل بينها فواصل. فعلى سبيل المثال johndoe@domain.com ، johnsmith@domain.com."
@@ -37,34 +36,15 @@
 "Share Your Wishlist","مشاركة قائمة أمنياتك"
 "Share options","خيارات المشاركة"
 "Sharing Information","بيانات المشاركة"
-=======
-"RSS Feed","RSS تغذية"
-"RSS link to %s's wishlist","RSS رابطة الى %s's قائمة الاماني"
-"Email Template","قالب البريد الإلكتروني"
-"My Wishlist","قائمة أمنياتي"
-"My Wishlist (%d items)","قائمة أمنياتي (%d سلع)"
-"My Wishlist (%d item)","قائمة أمنياتي (%d سلعة)"
-"Wishlist","قائمة الأمنيات"
-"Wishlist is empty now.","قائمة الأمنيات فارغة الآن."
-"My Wishlist - <a href=""%s"">%d Item(s)</a>","قائمتي للاماني - <a href=""%s"">%d Item(s)</a>"
-"You have no items in your wishlist.","ليس لديك أي سلع في قائمة أمنياتك."
-"Cannot create wishlist","لا يمكن إنشاء قائمة الأمنيات"
-"Cannot specify product","لا يمكن تخصيص المنتج"
-"Can't save description %s","لا يمكن حفظ الوصف %s"
-"Are you sure you would like to remove this item from the wishlist?","هل أنت متأكد أنك تود  إزالة هذاالمنتج من قائمة الأمنيات؟"
-"Are you sure you want to remove this product from your wishlist?","هل أنت متأكد أنك تريد إزالة هذا المنتج من قائمة أمنياتك؟"
-"Are You sure?","هل انت متاكد؟"
->>>>>>> 6befb3e5115251dc0dfcceea1be9de3a5d169522
 "There was an error while adding item to wishlist.","هنا خطأ أثناء إضافة سلعة إلى قائمة الأمنيات."
 "There was an error while adding item to wishlist: %s","هنا خطأ أثناء إضافة سلعة إلى قائمة الأمنيات: %s"
 "There was an error while deleting item from wishlist.","هناك خطأ أثناء حذف سلعة من قائمة الأمنيات."
 "There was an error while deleting item from wishlist: %s","هناك خطأ أثناء حذف سلعة من قائمة الأمنيات: %s"
 "This product(s) is currently out of stock:","هذه المنتجات هي حاليا غير موجوده في المخزن:"
-<<<<<<< HEAD
 "Update Wishlist","تحديث قائمة الأمنيات"
 "View Product","عرض المنتج"
 "Wishlist","قائمة الأمنيات"
-"Wishlist Section","Wishlist Section"
+"Wishlist Section","قسم قائمة أمنياتي"
 "Wishlist Sharing","مشاركة قائمة الأمنيات"
 "Wishlist is empty now.","قائمة الأمنيات فارغة الآن."
 "You have no items in your wishlist.","ليس لديك أي سلع في قائمة أمنياتك."
@@ -74,33 +54,3 @@
 "My Wishlist","قائمة أمنياتي"
 "Are you sure you want to remove this product from your wishlist?","Are you sure you want to remove this product from your wishlist?"
 "Please, enter your comments...","Please, enter your comments..."
-=======
-"Enabled","مفعل"
-"Please, enter your comments...","من فضلك قم بإدخال تعليقاتك..."
-"You input not valid email address.","مدخلاتك غير موجوده في عنوان البريد الالكتروني."
-"Email Sender","مرسل البريد الإلكتروني"
-"Share Your Wishlist","مشاركة قائمة أمنياتك"
-"Share Wishlist","مشاركة قائمة الأمنيات"
-"Wishlist Sharing","مشاركة قائمة الأمنيات"
-"Last Added Items","أخر السلع المضافة"
-"Remove Item","إزالة سلعة"
-"Add to Wishlist","إضافة إلى قائمة الأمنيات"
-"Add to Cart","إضافة إلى عربة التسوق"
-"Add All to Cart","إضافة الكل إلى عربة التسوق"
-"Product","المنتج"
-"Check this checkbox if you want to add a link to an rss feed to your wishlist.","التحقق من مربع الاختيار هذا اذا كنت تريد إضافة وصلة الى ار اس اس الخاصة بك الى الاماني."
-"Go to Wishlist","الذهاب إلى قائمة الأمنيات"
-"Please enter a valid email addresses, separated by commas. For example johndoe@domain.com, johnsmith@domain.com.","الرجاء ادخال عناوين البريد الالكتروني ، تفصل بينها فواصل. فعلى سبيل المثال johndoe@domain.com ، johnsmith@domain.com."
-"Back","العودة"
-"Added On","اضافة على"
-"Sharing Information","بيانات المشاركة"
-"Your Wishlist was successfully shared","تم مشاركة قائمة أمنياتك بنجاح"
-"Update Wishlist","تحديث قائمة الأمنيات"
-"Comment","تعليق"
-"Share options","خيارات المشاركة"
-"General Options","خيارات عامة"
-"Message","رسالة"
-"Email address can't be empty.","عنوان البريد الالكتروني لا يمكن ان يكون فارغا."
-"Email addresses, separated by commas","عناوين البريد الالكتروني ، تفصل بينها فواصل"
-"View Product","عرض المنتج"
->>>>>>> 6befb3e5115251dc0dfcceea1be9de3a5d169522
