--- a/app/locale/ar_SA/Mage_Backup.csv
+++ b/app/locale/ar_SA/Mage_Backup.csv
@@ -1,36 +1,20 @@
-<<<<<<< HEAD
 "Action","العملية"
 "All types","جميع الانواع"
-"Backup file ""%s"" can't read or write","Backup file ""%s"" can't read or write"
-"Backup file ""%s"" doesn't exist","Backup file ""%s"" doesn't exist"
+"Backup file ""%s"" can't read or write","ملفات احتياطية ""s%"" can't read or write"
+"Backup file ""%s"" doesn't exist","ملفات احتياطية ""s%"" غير متوفرة"
 "Backup file doesn't exist","نسخة الملف الاحتياطى غير موجود"
-"Backup file handler don't specify","Backup file handler don't specify"
-"Backup file path don't specify","Backup file path don't specify"
+"Backup file handler don't specify","معالج الملفات الاحتياطية لم تحدد"
+"Backup file path don't specify","طريق الملفات الاحتياطية لم يحدد"
 "Backups","النسخ الاحتياطية"
 "Cannot read backup file","لا يمكن القراءة من النسخة الاحتياطية"
 "Create Backup","انشئ نسخة احتياطية"
 "DB","قاعدة البيانات"
-"Database was successfuly backed up.","Database was successfuly backed up."
+"Database was successfuly backed up.","تم تخزين البيانات في الملفات الاحتياطية بنجاح"
 "Download","تحميل"
-"Error write to Backup file ""%s""","Error write to Backup file ""%s"""
+"Error write to Backup file ""%s""","خطأ بكتابة الملف الاحتياطي  ""%s"""
 "File compressed with Zlib, but this extension is not installed on server","تم انشاء الملف بواسطة Zlib ولكن هذه الاضافة غير متاحة فى الخادم"
-"Size, byte","Size, byte"
+"Size, byte","حجم، بايت"
 "Time","الزمن"
 "Type","النوع"
-"Unable to create backup. Please, try again later.","Unable to create backup. Please, try again later."
-=======
-"DB","قاعدة البيانات"
-"Cannot read backup file","لا يمكن القراءة من النسخة الاحتياطية"
-"Backup file doesn't exist","نسخة الملف الاحتياطى غير موجود"
-"Backups Control","مراقبة احتياطية"
-"Backups Control","مراقبة احتياطية"
-"Type","النوع"
-"Backups","النسخ الاحتياطية"
-"Time","الزمن"
-"Action","العملية"
-"Create Backup","انشئ نسخة احتياطية"
-"File compressed with Zlib, but this extension is not installed on server","تم انشاء الملف بواسطة Zlib ولكن هذه الاضافة غير متاحة فى الخادم"
-"Download","تحميل"
-"All types","جميع الانواع"
->>>>>>> 6befb3e5115251dc0dfcceea1be9de3a5d169522
+"Unable to create backup. Please, try again later.","يتعذر إنشاء نسخة احتياطية. الرجاء المحاولة فيما بعد"
 "Wrong order of creation for new backup","خطأ فى ترتيب انشاء نسخة احتياطية جديدة"
