--- a/app/locale/ar_SA/Mage_Contacts.csv
+++ b/app/locale/ar_SA/Mage_Contacts.csv
@@ -1,11 +1,10 @@
 "* Required Fields","* حقول مطلوبة"
-<<<<<<< HEAD
 "Comment","تعليق"
 "Contact Form","نموذج الاتصال"
 "Contact Information","بيانات الاتصال"
 "Contact Us","اتصل بنا"
 "Contacts","المتصلين"
-"Contacts Section","Contacts Section"
+"Contacts Section","إتصالات القسم"
 "Email","البريد الالكترونى"
 "Email Options","خيارات البريد الالكترونى"
 "Email Sender","مرسل الرسالة"
@@ -16,29 +15,11 @@
 "Submit","أرسل"
 "Telephone","الهاتف"
 "Unable to submit your request. Please, try again later","لا يمكن تنفيذ طلبك الان , من فضلك حاول لاحقا"
-"Your inquiry was submitted and will be responded to as soon as possible. Thank you for contacting us.","Your inquiry was submitted and will be responded to as soon as possible. Thank you for contacting us."
-"Contact Us","Contact Us"
-"Contact Information","Contact Information"
-"Name","Name"
-"Email","Email"
-"Telephone","Telephone"
-"Comment","Comment"
-"* Required Fields","* Required Fields"
-=======
-"Email Template","قوالب الرسالة"
-"Unable to submit your request. Please, try again later","لا يمكن تنفيذ طلبك الان , من فضلك حاول لاحقا"
-"Contact Form","نموذج الاتصال"
-"Email Sender","مرسل الرسالة"
-"Submit","أرسل"
-"Telephone","الهاتف"
-"Contacts","المتصلين"
-"Name","الأسم"
-"Email","البريد الالكترونى"
-"Contact Us","اتصل بنا"
-"Send Emails To","ارسل رسائل الى"
-"Contact Information","بيانات الاتصال"
-"Enable Contact Us","تفعيل اتصل بنا"
-"Your inquiry was submitted and will be responded as soon as possible. Thank you for contacting us.","تم استلام رسالتك و سيتم مراجعتها و الاستجابة باسرع ما يمكن, شكرا لاتصالك"
+"Your inquiry was submitted and will be responded to as soon as possible. Thank you for contacting us.","لقد تم استلام إستفسارك وسوف يتم الرد عليها في أقرب وقت ممكن. أشكركم على الاتصال بنا."
+"Contact Us","أتصل بنا"
+"Contact Information","معلومات الإتصال"
+"Name","الإسم"
+"Email","بريد ألكتروني"
+"Telephone","هاتف"
 "Comment","تعليق"
-"Email Options","خيارات البريد الالكترونى"
->>>>>>> 6befb3e5115251dc0dfcceea1be9de3a5d169522
+"* Required Fields","حقول مطلوبة *"
