--- a/app/locale/ar_SA/Mage_Cron.csv
+++ b/app/locale/ar_SA/Mage_Cron.csv
@@ -1,30 +1,18 @@
-<<<<<<< HEAD
-"Cron (Scheduled Tasks) - all the times are in minutes","Cron (Scheduled Tasks) - all the times are in minutes"
+"Cron (Scheduled Tasks) - all the times are in minutes","كرون (المهام المجدولة) - جميع الأوقات في دقائق"
 "Daily","يوميا"
 "Failure history lifetime","الفشل في تاريخ عمر"
-"For correct URLs generated during cron runs please make sure that Web > Secure and Unsecure Base URLs are explicitly set.","For correct URLs generated during cron runs please make sure that Web > Secure and Unsecure Base URLs are explicitly set."
-"Generate schedules every","Generate schedules every"
-"History cleanup every","History cleanup every"
-"Invalid callback: %s::%s does not exist","Invalid callback: %s::%s does not exist"
-"Invalid model/method definition, expecting ""model/class::method"".","Invalid model/method definition, expecting ""model/class::method""."
+"For correct URLs generated during cron runs please make sure that Web > Secure and Unsecure Base URLs are explicitly set.","لعناوين مواقع صحيحة تكونت خلال عمل الكرون من فضلك تأكد من أن يتم بوضوح تعيين قاعدة عناوين ويب > آمنة وغير آمنة."
+"Generate schedules every","توليد جداول كل"
+"History cleanup every","حذف السجلات كل"
+"Invalid callback: %s::%s does not exist","رد غير صالح  %s::%s لاويوجد"
+"Invalid model/method definition, expecting ""model/class::method"".","لايوجد طريقة  نموذج معرف , ماعدا ""model/class::method"""
 "Missed if not run within","اذا ضاعت لا يتنافى مع حدود"
 "Monthly","شهريا"
-"No callbacks found","No callbacks found"
+"No callbacks found","لايوجد ردور"
 "Schedule ahead for","الجدولة لـ"
-"Success history lifetime","نجاح عمر التاريخ"
-"Too late for the schedule","Too late for the schedule"
+"Success history lifetime","نجاح تاريخ العمر"
+"Too late for the schedule","متأخر كثيراً عن الجدول"
 "Unable to save Cron expression","خطأ فى حفظ العملية"
-"Unknown error","Unknown error"
+"Unknown error","خطأ غير معروف"
 "Weekly","اسبوعيا
 "
-=======
-"Daily","يوميا"
-"Success history lifetime","نجاح عمر التاريخ"
-"Failure history lifetime","الفشل في تاريخ عمر"
-"Schedule ahead for","الجدولة لـ"
-"Missed if not run within","اذا ضاعت لا يتنافى مع حدود"
-"Weekly","اسبوعيا
-"
-"Unable to save Cron expression","خطأ فى حفظ العملية"
-"Monthly","شهريا"
->>>>>>> 6befb3e5115251dc0dfcceea1be9de3a5d169522
