--- a/app/locale/ar_SA/Mage_Directory.csv
+++ b/app/locale/ar_SA/Mage_Directory.csv
@@ -1,18 +1,17 @@
 "-- Please select --","-- اختر من فضلك --"
-<<<<<<< HEAD
 "Allowed currencies","العملات المتاحة"
-"Base currency","Base currency"
+"Base currency","العملة الأصلية"
 "Cannot retrieve rate from %s","لايمكن استرجاع معدل من %s"
-"Connection timeout in seconds","Connection timeout in seconds"
+"Connection timeout in seconds","سيتم إنقطاع الاتصال خلال ثواني"
 "Continue &raquo;","تابع&raquo;"
 "Country","بلد"
-"Country Api","Country Api"
+"Country Api","Api البلد"
 "Country and Format Type combination should be unique","البلد نوع وشكل الجمع بين ينبغي ان تكون فريدة من نوعها"
 "Currency","العملة"
 "Currency Options","خيارات العملة"""
 "Currency Setup","اعدادات العملة"
 "Currency Update Warnings","تحذير تحرير بيانات العملة"
-"Currency will be used for all online payment transactions","Currency will be used for all online payment transactions"
+"Currency will be used for all online payment transactions","سيتم استخدام العملة لجميع معاملات الدفع عبر الانترنت"
 "Default display currency","العملة المعروضة اعتياديا"
 "Directory","Directory"
 "Enabled","مفعل"
@@ -26,11 +25,11 @@
 "Invalid country code: %s","خطأ فى شفرة الدولة: %s"
 "Invalid rates received","خطأ فى المعدل المستخدم"
 "Invalid target currency","خطأ فى العملة المستهدفة"
-"List of countries","List of countries"
+"List of countries","قوائم البلدان"
 "List of regions in specified country","List of regions in specified country"
 "Region","Region"
 "Region Api","Region Api"
-"Remove space from currency sign","Remove space from currency sign"
+"Remove space from currency sign","إحذف الفراغات من علامة العملة"
 "Scheduled Import Settings","اعدادات الاستيراد المجدول"
 "Select Your Currency","أختر عملتك"
 "Service","الخدمة"
@@ -42,36 +41,3 @@
 "WARNING:","تحذير:"
 "Webservicex","Webservicex"
 "Your current currency is: %s","عملتك الحالية هى: %s"
-=======
-"Cannot retrieve rate from %s","لايمكن استرجاع معدل من %s"
-"Enabled","مفعل"
-"Select Your Currency","أختر عملتك"
-"State/Province","الولاية - المحافظة"
-"Country and Format Type combination should be unique","البلد نوع وشكل الجمع بين ينبغي ان تكون فريدة من نوعها"
-"Frequency","التردد"
-"Service","الخدمة"
-"Invalid Import Service Specified","الخدمة المحدد غير صالح الاستيراد"
-"Allowed currencies","العملات المتاحة"
-"Installed Currencies","العملات المعدة"
-"Currency","العملة"
-"Default display currency","العملة المعروضة اعتياديا"
-"Base currency (Currency will be used for all online payment transactions)","العملة الاساسية ( ستستخدم فى كل العمليات المالية )"
-"Scheduled Import Settings","اعدادات الاستيراد المجدول"
-"Currency Setup","اعدادات العملة"
-"Country","بلد"
-"Continue &raquo;","تابع&raquo;"
-"Currency Update Warnings","تحذير تحرير بيانات العملة"
-"WARNING:","تحذير:"
-"Unable to initialize import model","تعذر تهيئة نموذج الاستيراد"
-"Currency Options","خيارات العملة"""
-"Error Email Template","خطأ فى قالب الرسالة"
-"Error Email Sender","خطأ فى مرسل الرسالة"
-"Error Email Recipient","خطأ فى مستقبل الرسالة"
-"Invalid rates received","خطأ فى المعدل المستخدم"
-"Invalid target currency","خطأ فى العملة المستهدفة"
-"Invalid country code: %s","خطأ فى شفرة الدولة: %s"
-"FATAL ERROR:","خطأ حيوي:"
-"Start Time","زمن البداية"
-"Your current currency is: %s","عملتك الحالية هى: %s"
-"Undefined rate from ""%s-%s""","غير معرف من معدل ""%s-%s"""
->>>>>>> 6befb3e5115251dc0dfcceea1be9de3a5d169522
