--- a/app/locale/ar_SA/Mage_Eav.csv
+++ b/app/locale/ar_SA/Mage_Eav.csv
@@ -1,17 +1,16 @@
-<<<<<<< HEAD
 "Attempt to add an invalid object","محاولة لاضافة هدف غير صحيح"
 "Attribute '%s' used in configurable products.","ميزة'%s' المنتجات المستخدمة في تهيئة."
-"Attribute set with the ""%s"" name already exists","Attribute set with the ""%s"" name already exists"
+"Attribute set with the ""%s"" name already exists","السمة المعينة مع الـ ""%s"" الاسم موجود مسبقا"
 "Attribute used in configurable products.","السمة المستخدمة في تهيئة المنتجات."
 "Attribute with the same code","السمة مع نفس الرمز"
 "Data integrity: No header row found for attribute","سلامة البيانات : لا يوجد صف الراسيه وجدت لالسمة"
-"Default Product Listing Sort by not exists on Available Product Listing Sort by","Default Product Listing Sort by not exists on Available Product Listing Sort by"
+"Default Product Listing Sort by not exists on Available Product Listing Sort by","المنتج الافتراضي فرز القوائم غير متاح من قبل المنتجات فرز القوائم"
 "Default option value is not defined","قيمة الخيار الافتراضية غير معرفة"
-"EAV types and attributes","EAV types and attributes"
+"EAV types and attributes","أنواع وصفات EAV"
 "Entity collection expected","كيان ال المتوقع"
 "Entity collections expected","من المتوقع ان الكيان مجموعات"
 "Entity is not initialized","الكيان لم تتم تهيئة"
-"Failed to load node %s from config.","Failed to load node %s from config."
+"Failed to load node %s from config.","فشل تحميل node٪ s من config."
 "Frontend label is not defined","الواجهة علامة غير محدد"
 "Invalid alias, already exists in joined attributes","الاسم المستعار غير صحيح ، يوجد بالفعل في الصفات انضم"
 "Invalid attribute name: %s","اسم السمة غير صحيحة: %s"
@@ -33,14 +32,14 @@
 "Joined field with this alias is already declared","انضم الى الميدان مع هذا الاسم المستعار هو سبق ان اعلنت"
 "Loaded %d records","تحميل %d تسجيلات"
 "No","لا"
-"No options found in config node %s","No options found in config node %s"
-"Problem loading a record, aborting. Error: %s","مشكلة تحميل رقما قياسيا ، اجهاض. خطأ: %s"
-"Problem loading the collection, aborting. Error: %s","مشكلة تحميل جمع اجهاض. خطأ: %s"
-"Problem saving a record, aborting. Error: ","مشكلة في حفظ البيان، توقف. خطأ: "
-"Problem saving the collection, aborting. Error: %s","مشكلة في حفظ المجموعة، توقف. خطأ: %s"
+"No options found in config node %s","لا توجد خيارات في عقدة الإعدادت %s"
+"Problem loading a record, aborting. Error: %s","مشكلة في تحميل سجل, إحباط . خطأ: %s"
+"Problem loading the collection, aborting. Error: %s","مشكلة تحميل المجموعة, إحباط . خطأ: %s"
+"Problem saving a record, aborting. Error: ","مشكلة حفظ السجل , إحباط . خطأ: %s"
+"Problem saving the collection, aborting. Error: %s","مشكلة حفظ المجموعة , إحباط . خطأ: %s"
 "Saved ","تم الحفظ "
-"Scope must not be changed, because the attribute is used in configurable products.","Scope must not be changed, because the attribute is used in configurable products."
-"The attribute code '%s' is reserved by system. Please, try another attribute code.","The attribute code '%s' is reserved by system. Please, try another attribute code."
+"Scope must not be changed, because the attribute is used in configurable products.","المجال لايمكن تغييره, لأن السمة المستخدمة في إعدادت المنتجات"
+"The attribute code '%s' is reserved by system. Please, try another attribute code.","رمز السمة '%s' المحجوزة من النظام . من فضلك, حاول مع رمز سمة مختلف"
 "Unknown parameter","معامل غير معروف"
 "Valid store_id is expected!","ومن المتوقع صالحة store_id!"
 "Value of attribute ""%s"" must be unique","قيمة الميزة ""%s"" لابد ان يكون نادرا"
@@ -49,50 +48,3 @@
 "Wrong attribute set ID","ميزة خاطئه لوضع الرمز التعريفي"
 "Wrong entity ID","خطا الكيان هوية"
 "Yes","موافق"
-=======
-"Invalid entity_id, skipping the record","Entity_id غير صحيح ، تخطى سجل"
-"Invalid entity_type specified: %s","Entity_type المحدد غير صحيح: %s"
-"Entity collection expected","كيان ال المتوقع"
-"Invalid character encountered in increment ID: %s","ووجهت في حرف غير صالح زيادة معرف: %s"
-"Valid store_id is expected!","ومن المتوقع صالحة store_id!"
-"Value of attribute ""%s"" must be unique","قيمة الميزة ""%s"" لابد ان يكون نادرا"
-"Default option value is not defined","قيمة الخيار الافتراضية غير معرفة"
-"No","لا"
-"No options root node found","لا خيارات الجذر وجدت العقده"
-"Invalid entity type","نوع كائن غير صحيح"
-"Invalid attribute type","نوع السمة غير صحيحة"
-"Yes","نعم"
-"Wrong attribute set ID","ميزة خاطئه لوضع الرمز التعريفي"
-"Wrong attribute group ID","ميزة خاطئه لمجموعة الرمز التعريفي"
-"Wrong attribute ID","ميزة خاطئه لرمز التعريفي "
-"Attribute '%s' used in configurable products.","ميزة'%s' المنتجات المستخدمة في تهيئة."
-"Invalid foreign key","مفتاح خارجي غير صحيح"
-"Entity collections expected","من المتوقع ان الكيان مجموعات"
-"Attempt to add an invalid object","محاولة لاضافة هدف غير صحيح"
-"Problem saving the collection, aborting. Error: %s","مشكلة في حفظ المجموعة، توقف. خطأ: %s"
-"Problem saving a record, aborting. Error: ","مشكلة في حفظ البيان، توقف. خطأ: "
-"Problem loading the collection, aborting. Error: %s","مشكلة تحميل جمع اجهاض. خطأ: %s"
-"Problem loading a record, aborting. Error: %s","مشكلة تحميل رقما قياسيا ، اجهاض. خطأ: %s"
-"Unknown parameter","معامل غير معروف"
-"Entity is not initialized","الكيان لم تتم تهيئة"
-"Frontend label is not defined","الواجهة علامة غير محدد"
-"Invalid store specified","المتجر المحدد غير صحيح"
-"Invalid alias, already exists in joined attributes","الاسم المستعار غير صحيح ، يوجد بالفعل في الصفات انضم"
-"Attribute with the same code","السمة مع نفس الرمز"
-"Invalid attribute specified: %s","السمة المحددة غير صالحة: %s"
-"Attribute used in configurable products.","السمة المستخدمة في تهيئة المنتجات."
-"Joined field with this alias (%s) is already declared","انضم الى هذا المجال مع الاسم المستعار (%s) سبق ان اعلنت هي"
-"Invalid joined fields","انضم الى مجالات غير صالحة"
-"Joined field with this alias is already declared","انضم الى الميدان مع هذا الاسم المستعار هو سبق ان اعلنت"
-"Joined field or attribute expression with this alias is already declared","انضم الى الميدان أو سمة التعبير مع هذا الاسم المستعار هو سبق ان اعلنت"
-"Invalid attribute name: %s","اسم السمة غير صحيحة: %s"
-"Invalid data object key","بيانات غير صحيحة وجوه الرئيسية"
-"Saved ","تم الحفظ "
-"Loaded %d records","تحميل %d تسجيلات"
-"Wrong entity ID","خطا الكيان هوية"
-"Data integrity: No header row found for attribute","سلامة البيانات : لا يوجد صف الراسيه وجدت لالسمة"
-"Invalid attribute requested: %s","طلب السمة غير صحيحة: %s"
-"Invalid entity supplied","غير صالح الكيان الموردة"
-"Invalid entity supplied: %s","غير صالح الكيان الموردة: %s"
-"Invalid entity specified","غير صالح الكيان المحدد"
->>>>>>> 6befb3e5115251dc0dfcceea1be9de3a5d169522
