--- a/app/locale/ar_SA/Mage_Shipping.csv
+++ b/app/locale/ar_SA/Mage_Shipping.csv
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 " for more information or email us at ","لمزيد من المعلومات او ارسال رساله الكترونية على  "
 "# of Items (and above)","# للعناصر (و اعلى)"
 "# of Items vs. Destination","# للعناصر vs. مسار"
@@ -14,14 +13,14 @@
 "Delivered to:","تم التسليم إلى:"
 "Description","الوصف"
 "Displayed Error Message","رسالة الخطأ المعروضة"
-"Duplicate Row #%s (Country ""%s"", Region/State ""%s"", Zip ""%s"" and Value ""%s"")","Duplicate Row #%s (المدينة ""%s"", المحافظة /البلد ""%s"", الرقم البريدي ""%s"" و القيمة ""%s"")"
+"Duplicate Row #%s (Country ""%s"", Region/State ""%s"", Zip ""%s"" and Value ""%s"")","تكرار الصف #%s (Country ""%s"", Region/State ""%s"", Zip ""%s"" and Value ""%s"")"
 "Enabled","مفعل"
 "Error:","خطأ:"
 "Export","تصدير"
 "Fixed","ثابت"
 "Flat Rate","معدل ثابت"
 "Free Shipping","شحن مجاني"
-"Handling Fee","رسمو التسليم"
+"Handling Fee","رسوم الشحن"
 "Import","استيراد"
 "Info:","معلومات:"
 "Invalid %s ""%s"" in the Row #%s","غير صحيح %s ""%s"" في الصف #%s"
@@ -36,16 +35,16 @@
 "Maximum qty allowed for Shipping to multiple addresses","الكمية القصوى المسموح بها للشحن إلى عناوين متعددة"
 "Method name","اسم الطريقة"
 "Minimum order amount","الحد الادنى من كمية الاوامر"
-"N/A","N/A"
-"None","بلا"
+"N/A","غير متاح"
+"None","لايوجد"
 "Options","خيارات"
 "Order Subtotal (and above)","من أجل المجموع الفرعي (وما فوق)"
 "Origin","الاصل"
-"Per Order","لكل امر"
+"Per Order","حسب الطلبية"
 "Per Package","لكل مجموعة"
 "Percent","النسبة المئوية"
 "Price","السعر"
-"Price vs. Destination","سعر vs. مسار"
+"Price vs. Destination","السعر مقابل الوجهة"
 "Region/State","المنطقة/الولاية"
 "Service Type:","نوع الخدمة:"
 "Ship to Specific countries","الشحن إلى دول محددة"
@@ -53,15 +52,15 @@
 "Shipment #","شحنه #"
 "Shipped or billed on:","المشحونه او فاتوره:"
 "Shipping Methods","طرق الشحن"
-"Shipping Methods Section","Shipping Methods Section"
+"Shipping Methods Section","قسم طرق الشحن"
 "Shipping Settings","إعدادات الشحن"
-"Shipping Settings Section","Shipping Settings Section"
-"Show method if not applicable","وتبين طريقة وإذا لا ينطبق"
+"Shipping Settings Section","قسم اعدادات الشحن"
+"Show method if not applicable","عرض الطريقة إذا لا ينطبق"
 "Signed by:","وقعت بواسطة:"
 "Sort order","الترتيب"
 "Status:","الحالة:"
 "Store Pickup","اختيار المتجر"
-"Table rates","جدول المعادلات"
+"Table rates","لائحة الأسعار"
 "The shipping module is not available for selected delivery country","النقل البحري وحده لا تتوفر لمجموعة مختارة من ايصال البلد"
 "There is no tracking available for this shipment.","لا يوجد اي تتبع المتاحة لهذه الشحنه."
 "There is no tracking available.","لا يوجد متابعة مسموحة."
@@ -75,83 +74,5 @@
 "Weight (and above)","الوزن (و ما فوق)"
 "Weight vs. Destination","الوزن vs. المسار"
 "Weight:","الوزن:"
-"ZIP/Postal Code","ZIP/Postal Code"
+"ZIP/Postal Code","الرمز البريدي"
 "contact us","اتصل بنا"
-=======
-"# of Items (and above)","# للعناصر (و اعلى)"
-"# of Items vs. Destination","# للعناصر vs. مسار"
-"Duplicate Row #%s (Country ""%s"", Region/State ""%s"", Zip ""%s"" and Value ""%s"")","Duplicate Row #%s (المدينة ""%s"", المحافظة /البلد ""%s"", الرقم البريدي ""%s"" و القيمة ""%s"")"
-"N/A","N/A"
-"Signed by:","وقعت بواسطة:"
-"Show method if not applicable","وتبين طريقة وإذا لا ينطبق"
-"Per Package","لكل مجموعة"
-"Per Order","لكل امر"
-" for more information or email us at ","لمزيد من المعلومات او ارسال رساله الكترونية على  "
-"There is no tracking available.","لا يوجد متابعة مسموحة."
-"There is no tracking available for this shipment.","لا يوجد اي تتبع المتاحة لهذه الشحنه."
-"Service Type:","نوع الخدمة:"
-"This shipping method is currently unavailable. If you would like to ship using this shipping method, please contact us.","هذه طريقة الشحن غير متوفره حاليا. اذا اردت ان سفينة الشحن باستخدام هذا الأسلوب ، يرجى الاتصال بنا."
-"Enabled","مفعل"
-"Location","موقع"
-"Order Subtotal (and above)","من أجل المجموع الفرعي (وما فوق)"
-"Invalid Region/State ""%s"" in the Row #%s","منطقة/ولاية غير صحيحة ""%s"" في الصف #%s"
-"Info:","معلومات:"
-"Flat Rate","معدل ثابت"
-"ZIP/Postal Code","ZIP/Postal Code"
-"Shipping Settings","إعدادات الشحن"
-"Close Window","إغلاق النافذة"
-"Maximum qty allowed for Shipping to multiple addresses","الكمية القصوى المسموح بها للشحن إلى عناوين متعددة"
-"Weight (and above)","الوزن (و ما فوق)"
-"Weight vs. Destination","الوزن vs. المسار"
-"Weight:","الوزن:"
-"Description","الوصف"
-"Type","النوع"
-"The shipping module is not available for selected delivery country","النقل البحري وحده لا تتوفر لمجموعة مختارة من ايصال البلد"
-"Carrier:","الناقل:"
-"Percent","النسبة المئوية"
-"Region/State","المنطقة/الولاية"
-"City","المدينة"
-"Shipped or billed on:","المشحونه او فاتوره:"
-"Origin","الاصل"
-"Local Time","التوقيت المحلي"
-"Date","التاريخ"
-"Sort order","الترتيب"
-"Invalid Table Rates File Format","الجدول معدلات غير صالح صيغة ملف"
-"Status:","الحالة:"
-"Minimum order amount","الحد الادنى من كمية الاوامر"
-"Country","الدولة"
-"Allow Shipping to multiple addresses","السماح بالشحن لعناوين متعددة"
-"Price","السعر"
-"Ship to applicable countries","الشحن إلى الدول المطابقة"
-"Ship to Specific countries","الشحن إلى دول محددة"
-"Condition","الشرط"
-"Title","العنوان"
-"contact us","اتصل بنا"
-"Store Pickup","اختيار المتجر"
-"Method name","اسم الطريقة"
-"Import","استيراد"
-"Tracking information is currently unavailable.","بيانات التتبع غير موجودة حاليا."
-"Tracking information is currently not available. Please ","بيانات التتبع غير موجودة حاليا. من فضلك "
-"None","بلا"
-"Delivered on:","تم التسليم في:"
-"Delivered to:","تم التسليم إلى:"
-"Track:","تتبع:"
-"Export","تصدير"
-"Fixed","ثابت"
-"Table rates","جدول المعادلات"
-"Invalid Table Rate code type: %s","جدول غير صالح قانون معدل نوع: %s"
-"Calculate Handling Fee","حساب رسوم التسليم"
-"Options","خيارات"
-"Error:","خطأ:"
-"Invalid Country ""%s"" in the Row #%s","دولة غير صحيحة ""%s"" في الصف #%s"
-"Tracking Number:","رقم التتبع:"
-"Handling Fee","رسمو التسليم"
-"Displayed Error Message","رسالة الخطأ المعروضة"
-"Price vs. Destination","سعر vs. مسار"
-"Invalid Shipping Price ""%s"" in the Row #%s","سعر شحن غير صحيح ""%s"" في الصف #%s"
-"Free Shipping","شحن مجاني"
-"Shipment #","شحنه #"
-"Shipping Methods","طرق الشحن"
-"Invalid %s ""%s"" in the Row #%s","غير صحيح %s ""%s"" في الصف #%s"
-"Invalid Table Rate code for type %s: %s","غير صحيح الجدول المعدل لقانون النوع %s: %s"
->>>>>>> 6befb3e5115251dc0dfcceea1be9de3a5d169522
