creo ar text domain added on collection templates

--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -17,6 +17,7 @@
 "Collections","مجموعات"
 "DESIGN YOUR OWN","التصميم الخاص بك"
 "Design Your Own","تصميم بنفسك"
+"DESIGN CATEGORIES","تصميم الفئات"
 "TShirt","تي شيرت"
 "T Shirt","تي شيرت"
 "T-Shirt","تي شيرت"
@@ -41,10 +42,10 @@
 "In stock","في المخزن"
 "Quantity","كمية"
 "Caps","الكتابة بالأحرف الكبيرة"
-"Subscribe and get 20% OFF on your first purchase","اشترك واحصل على خصم 20% عند أول شراء"
+"Subscribe and get <big>20%</big> OFF on your first purchase","اشترك واحصل على خصم <big>%20</big> عند أول شراء"
 "Email","البريد الالكتروني"
 "GET MY 20% OFF NOW","الحصول على خصم 20% الآن"
-"Don?t show this popup again","لا تظهر هذه الرسائل مرة أخرى"
+"Don’t show this popup again","لا تظهر هذه الرسائل مرة أخرى"
 "Home","الصفحة الرئيسية"
 "HOME","الصفحة الرئيسية"
 "ACCESSORIES","الاكسسوارات"
@@ -92,7 +93,7 @@
 "Tank Top","قميص بلا أكمام"
 "Polo","بولو"
 "New Collection","مجموعة جديدة"
-"Search by Design","ابحث باستخدام التصميم"
+"Search By Design","ابحث باستخدام التصميم"
 "View All","أظهر الكل"
 "Barcode","شيفرة التعريف( باركود)"
 "Brands","العلامات التجارية"
