creo ar css and template text domain changes

--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -82,6 +82,8 @@
 "Payment Methods","طرق الدفع"
 "JOIN","انضم الينا"
 "MY CART","عربتي"
+"My Cart","عربتي"
+"my cart","عربتي"
 "search entire store he","ابحث في كامل المتجر"
 "Featured","متميز"
 "Trending","الأكثر انتشاراً"
@@ -103,7 +105,7 @@
 "Pug Life","أسلوب حياة الشخص السعيد"
 "Retro/Boho","رجعي/ بوهيمي"
 "X City Love","حب مدينة X"
-"All designs are available on Round Neck T-Shirt, V Neck T-Shirt and Tank Tops","تتوفر جميع التصميمات بقمصان ذات ياقات دائرية وياقات على شكل حرف V وقمصان بلا أكمام"
+"All designs are available on Round Neck T-Shirt, V Neck T-Shirt and Tank Tops.","تتوفر جميع التصميمات بقمصان ذات ياقات دائرية وياقات على شكل حرف V وقمصان بلا أكمام"
 "Phone Model","موديل الهاتف"
 "Cases","حالات"
 "Leather","الجلد"
@@ -212,6 +214,10 @@
 "Password","كلمة المرور"
 "Remember My Password","تذكر كلمة المرور الخاصة بي"
 "forgotpassword","نسيت كلمة المرور"
+"Forgot password?","نسيت كلمة المرور?"
+"Create account","إصنع حساب"
+"FORGOT YOUR PASSWORD?","نسيت رقمك السري؟"
+"Customized Products","المنتجات حسب الطلب"
 "Sign up with Facebook","سجل الدخول باستخدام حساب فيسبول"
 "submit","تقديم"
 "NEW CUSTOMERS","عملاء جدد"
