creo ar create category text domain

--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -12,6 +12,7 @@
 "Accessories","ملحقات"
 "Caps","قبعات"
 "CAPS","قبعات"
+"caps","قبعات"
 "The Crazy Ones","المجانين"
 "COLLECTIONS","مختارات"
 "Collections","مجموعات"
@@ -54,6 +55,8 @@
 "LOGIN","تسجيل الدخول"
 "T-Shirt","قميص"
 "NOTEBOOKS","دفاتر الملاحظات"
+"Notebooks","دفاتر الملاحظات"
+"notebooks","دفاتر الملاحظات"
 "POLO SHIRTS","قميص بولو"
 "If you can Create, you can CREO","إذا بإمكانك الإبداع فبإمكانك استخدام CREO"
 "Read on, and discover why CREO is more than a marketplace, and why the people are more essential than the product","القراءة واكتشاف سبب كون CREO أكثر من مجرد موقع للتسوّق، وسبب أهمية العملاء أكثر من المنتج"
