creo ar design your own css fixes

--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -134,15 +134,15 @@
 "Majnoon","مجنون"
 "Trendy","شائع"
 "Save Your Design","حفظ التصميم الخاص بك"
-"Name Your Design:","اسم التصميم الخاص بك:"
-"Note:","ملاحظة:"
+"Name Your Design","اسم التصميم الخاص بك"
+"Note","ملاحظة"
 "Enter your design name","أدخل اسم التصميم الخاص بك"
 "Your comment notes","الملاحظات تعليقك"
-"30 characters max.","30 حرفا كحد أقصى."
+"30 characters max","30 حرفا كحد أقصى"
 "Save Design","حفظ التصميم"
-"Save for later use.","حفظ لاستخدامها لاحقا."
-"No, Thanks. I will do it later.","لا شكرا. انا سوف اقوم بها لاحقا."
-"Review your design and continue.","مراجعة التصميم الخاص بك ومتابعة."
+"Save for later use","حفظ لاستخدامها لاحقا"
+"No, Thanks. I will do it later","لا شكرا. انا سوف اقوم بها لاحقا"
+"Review your design and continue","مراجعة التصميم الخاص بك ومتابعة"
 "Please login to save your design to your account page. Just press SAVE DESIGN button after logged in.","الرجاء تسجيل الدخول لحفظ التصميم الخاص بك إلى صفحة الحساب الخاص بك. فقط اضغط على زر حفظ التصميم بعد دخولك."
 "Click here to login or Create an account","اضغط هنا للدخول أو إنشاء حساب"
 "CALCULATE ARTWORK:","حساب عمل فني:"
@@ -152,7 +152,7 @@
 " Custom Round Neck - Plain T-shirt","مخصص جولة الرقبة - عادي تي شيرت"
 "ELEMENTS USED","العناصر المستخدمة"
 "CUSTOMIZE IT","تخصيصه"
-"Total Price :","السعر الكلي :"
+"Total Price","السعر الكلي"
 "Add Graphic","إضافة الجرافيكي"
 "Add Text","إضافة نص"
 "Select Color","اختيار اللون"
