creo ar design your own css fixes

--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -157,6 +157,8 @@
 "Add Text","إضافة نص"
 "Select Color","اختيار اللون"
 " Download","تحميل"
+"Download customized design","تحميل التصميم حسب الطلب"
+"JOIN","انضم"
 
 "Movie Posters","بوسترات الأفلام"
 "Dubai Icon","أيقونة دبي"
