creo ar js validation text domain for login page

--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -206,6 +206,9 @@
 "First Name","الاسم الأول"
 "Last Name","اسم العائلة"
 "Email Address","عنوان البريد الالكتروني"
+"Email Adress is a required field.","عنوان البريد الإلكتروني هو حقل مطلوب"
+"© 2015 All rights reserved.","© 2015 جميع الحقوق محفوظة."
+"Password is a required field.","كلمة السر هو حقل مطلوب."
 "Telephone","الهاتف"
 "Address","العنوان"
 "Address 2","العنوان الثاني"
