creo ar mobile template and text domain

--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -115,6 +115,7 @@
 "Wood","الخشب"
 "Notebook Material","مادة دفتر الملاحظات"
 "Mesh Caps","قبعات شبكية"
+"Mesh Color","شبكة اللون"
 "Snap Backs","قبعة بيسبول"
 "Arabic","عربي"
 "Bring The Boom","كن مختلفاً"
