creo ar mobile template and text domain

--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -29,6 +29,7 @@
 "TRENDING","تتجه"
 "Best Seller","الأكثر مبيعًا"
 "BEST SELLER","الأكثر مبيعًا"
+"Best Sellers","الأكثر مبيعًا"
 "New","جديد"
 "NEW","جديد"
 "Cases","الحالات"
@@ -142,6 +143,8 @@
 "30 characters max","30 حرفا كحد أقصى"
 "Save Design","حفظ التصميم"
 "Save for later use","حفظ لاستخدامها لاحقا"
+"reviews","استعراض"
+"Ship to same address","السفينة إلى نفس العنوان"
 "No, Thanks. I will do it later","لا شكرا. انا سوف اقوم بها لاحقا"
 "Review your design and continue","مراجعة التصميم الخاص بك ومتابعة"
 "Please login to save your design to your account page. Just press SAVE DESIGN button after logged in.","الرجاء تسجيل الدخول لحفظ التصميم الخاص بك إلى صفحة الحساب الخاص بك. فقط اضغط على زر حفظ التصميم بعد دخولك."
@@ -199,6 +202,7 @@
 "Grand Total","المجموع الإجمالي"
 "Subtotal","المجموع الفرعي"
 "CONTINUE SHOPPING","استمر بالتسوق"
+"SHOPPING CART","عربة التسوق"
 "Proceed to Checkout","استمر للوصول الى الدفع"
 "UPDATE SHOPPING BAG","تحديث حقيبة التسوق"
 "CLEAR CART","أفرغ عربة التسوق"
