text domain fix

--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -241,6 +241,7 @@
 "Please make sure to select tshirt color","يرجى التأكد من اختيار لون القميص"
 "has been added to your shopping cart.","تم إضافته الى عربة التسوق الخاصة بك"
 "SUCCESS","نجاح"
+"View Cart","السلة عرض"
 
 "Alert!","تنبيه!"
 "Please make sure to select style.","يرجى التأكد من اختيار النمط"
