text domain changes

--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -261,6 +261,7 @@
 "Customized Products","المنتجات حسب الطلب"
 "Sign up with Facebook","سجل الدخول باستخدام حساب فيسبول"
 "submit","تقديم"
+"SUBMIT","تقديم"
 "NEW CUSTOMERS","عملاء جدد"
 "Confirm Password","أكد كلمة المرور"
 "Sign Up for Newsletter","اشترك بالنشرات الاخبارية"
