text domain changes

--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -262,6 +262,7 @@
 "Sign up with Facebook","سجل الدخول باستخدام حساب فيسبول"
 "submit","تقديم"
 "SUBMIT","تقديم"
+"Submit","تقديم"
 "NEW CUSTOMERS","عملاء جدد"
 "Confirm Password","أكد كلمة المرور"
 "Sign Up for Newsletter","اشترك بالنشرات الاخبارية"
