--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -69,6 +69,7 @@
 "Customer Service","خدمة العملاء"
 "FAQ","الأسئلة الأكثر شيوعاً"
 "SHIPPING","الشحن"
+"SHIP TO ADDRESS","السفينة إلى عنوان"
 "Bulk Orders","طلبات بالجملة"
 "Return Policy","سياسة الإرجاع"
 "Payment Method","طريقة الدفع"
@@ -205,6 +206,7 @@
 "SHOPPING CART","عربة التسوق"
 "Proceed to Checkout","استمر للوصول الى الدفع"
 "UPDATE SHOPPING BAG","تحديث حقيبة التسوق"
+"update SHOPPING BAG","تحديث حقيبة التسوق"
 "CLEAR CART","أفرغ عربة التسوق"
 "CHECKOUT","الدفع"
 "billing and shipping","الفوترة والشحن"
