Text Domain and css cart and checkout page fixes mobile

--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -99,6 +99,8 @@
 "Women","نساء"
 "Tank Top","قميص بلا أكمام"
 "Polo","بولو"
+"Polo Color","بولو اللون"
+"Print Color","طباعة اللون"
 "New Collection","مجموعة جديدة"
 "Search By Design","ابحث باستخدام التصميم"
 "View All","أظهر الكل"
@@ -191,6 +193,8 @@
 "Quantity","الكمية"
 "Creo's Celebrity Hush is a provocative insight on the secret life of celebrities. But you don't have to hush about it","ميزة أخبار المشاهير من CREO هي رؤية مثيرة على الحياة المشاهير . لكن ليس عليك أن تتكتم حولها"
 "Add to Cart","أضف الى عربة التسوق"
+"There are no products matching the selection.","لا توجد منتجات مطابقة مع الاختيارات."
+"Your search returns no results.","أسفر بحثك عن أية نتائج."
 "Shipping Information","معلومات الشحن"
 "PRODUCT DESCRIPTION","مواصفات المنتج"
 "UNIT PRICE","سعر الوحدة"
@@ -259,6 +263,7 @@
 "forgotpassword","نسيت كلمة المرور"
 "Forgot password?","نسيت كلمة المرور?"
 "Create account","إصنع حساب"
+"Create Account","إصنع حساب"
 "FORGOT YOUR PASSWORD?","نسيت رقمك السري؟"
 "Customized Products","المنتجات حسب الطلب"
 "Sign up with Facebook","سجل الدخول باستخدام حساب فيسبول"
