creo ar text domain fix

--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -19,6 +19,7 @@
 "DESIGN YOUR OWN","التصميم الخاص بك"
 "Design Your Own","تصميم بنفسك"
 "DESIGN CATEGORIES","تصميم الفئات"
+"Design Category","تصميم الفئة"
 "TShirt","تي شيرت"
 "T Shirt","تي شيرت"
 "T-Shirt","تي شيرت"
