creo ar css and text domain fixes

--- a/app/design/frontend/base/default/locale/ar_SA/translate.csv
+++ b/app/design/frontend/base/default/locale/ar_SA/translate.csv
@@ -203,6 +203,7 @@
 "Quantity","الكمية"
 "Creo's Celebrity Hush is a provocative insight on the secret life of celebrities. But you don't have to hush about it","ميزة أخبار المشاهير من CREO هي رؤية مثيرة على الحياة المشاهير . لكن ليس عليك أن تتكتم حولها"
 "Add to Cart","أضف الى عربة التسوق"
+"ADD TO CART","أضف الى عربة التسوق"
 "There are no products matching the selection.","لا توجد منتجات مطابقة مع الاختيارات."
 "Your search returns no results.","أسفر بحثك عن أية نتائج."
 "Shipping Information","معلومات الشحن"
@@ -213,6 +214,7 @@
 "Edit Remove Item","تحرير أو إزال الموضوع"
 "Edit","تحرير"
 "Edit Address","تعديل العنوان"
+"PRODUCT DETAILS","تفاصيل المنتج"
 "Round","دائري"
 "Tshirt Color","لون القميص"
 "Green","أخضر"
